--- a/Barker.csproj
+++ b/Barker.csproj
@@ -190,6 +190,8 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BarksController.cs" />
     <Compile Include="Controllers\BaseAuthenticatedController.cs" />
+    <Compile Include="Controllers\FollowersController.cs" />
+    <Compile Include="Controllers\FollowingController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
@@ -210,10 +212,20 @@
     <Compile Include="Migrations\201510042135085_init.Designer.cs">
       <DependentUpon>201510042135085_init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201510102207108_rebark.cs" />
+    <Compile Include="Migrations\201510102207108_rebark.Designer.cs">
+      <DependentUpon>201510102207108_rebark.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201510102212594_rebarks.cs" />
+    <Compile Include="Migrations\201510102212594_rebarks.Designer.cs">
+      <DependentUpon>201510102212594_rebarks.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\ViewModels\CurrentUserVM.cs" />
+    <Compile Include="Models\ViewModels\HomeVM.cs" />
     <Compile Include="Models\ViewModels\UserSearchVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -284,6 +296,14 @@
     <Content Include="Views\Barks\Details.cshtml" />
     <Content Include="Views\Barks\Edit.cshtml" />
     <Content Include="Views\Barks\Index.cshtml" />
+    <Content Include="Views\Barks\Rebark.cshtml" />
+    <Content Include="Views\Followers\Index.cshtml" />
+    <Content Include="Views\Following\Create.cshtml" />
+    <Content Include="Views\Following\Delete.cshtml" />
+    <Content Include="Views\Following\Details.cshtml" />
+    <Content Include="Views\Following\Edit.cshtml" />
+    <Content Include="Views\Following\Index.cshtml" />
+    <Content Include="Views\Barks\ViewByUser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -300,6 +320,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201510042135085_init.resx">
       <DependentUpon>201510042135085_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201510102207108_rebark.resx">
+      <DependentUpon>201510102207108_rebark.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201510102212594_rebarks.resx">
+      <DependentUpon>201510102212594_rebarks.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
