--- a/Barker.csproj
+++ b/Barker.csproj
@@ -220,6 +220,10 @@
     <Compile Include="Migrations\201510102212594_rebarks.Designer.cs">
       <DependentUpon>201510102212594_rebarks.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201510180205500_aws.cs" />
+    <Compile Include="Migrations\201510180205500_aws.Designer.cs">
+      <DependentUpon>201510180205500_aws.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -240,6 +244,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Properties\PublishProfiles\Barker.pubxml" />
+    <None Include="Properties\PublishProfiles\Release.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -326,6 +331,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201510102212594_rebarks.resx">
       <DependentUpon>201510102212594_rebarks.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201510180205500_aws.resx">
+      <DependentUpon>201510180205500_aws.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
