--- a/Web.Debug.config
+++ b/Web.Debug.config
@@ -14,6 +14,28 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings  xdt:Transform="Replace">
+    <!--  <add name="DefaultConnection"
+        providerName="System.Data.SqlClient"
+        connectionString="Data Source=cs597webdevdb.czovholt5fwn.us-west-2.rds.amazonaws.com:1433;
+        initial catalog=Barker;
+         MultipleActiveResultSets=True;
+         Integrated Security=False;
+         Trusted_Connection=False;
+         Persist Security Info=True;
+         user id=CS597WebDev;password=#AllYourBase1985;"/>-->
+    <add name="BarkerData"
+          providerName="System.Data.SqlClient"
+         connectionString="data source=cs597webdevdb.czovholt5fwn.us-west-2.rds.amazonaws.com;
+         initial catalog=Barker;
+         MultipleActiveResultSets=True;
+         Integrated Security=False;
+         Trusted_Connection=False;
+         Persist Security Info=True;
+         user id=CS597WebDev;password=#AllYourBase1985;"
+         
+         />
+  </connectionStrings>
   <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire
