--- a/Web.config
+++ b/Web.config
@@ -9,9 +9,35 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=CALVIN-PC\SQLEXPRESS;Initial Catalog=Barker;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <!--  <add name="DefaultConnection"
+        providerName="System.Data.SqlClient"
+        connectionString="Data Source=cs597webdevdb.czovholt5fwn.us-west-2.rds.amazonaws.com:1433;
+        initial catalog=Barker;
+         MultipleActiveResultSets=True;
+         Integrated Security=False;
+         Trusted_Connection=False;
+         Persist Security Info=True;
+         user id=CS597WebDev;password=#AllYourBase1985;"/>-->
 
-   <add name="BarkerData" connectionString="data source=calvin-pc\sqlexpress;initial catalog=Barker;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="BarkerData"
+          providerName="System.Data.SqlClient"
+         connectionString="data source=cs597webdevdb.czovholt5fwn.us-west-2.rds.amazonaws.com;
+         initial catalog=Barker;
+         MultipleActiveResultSets=True;
+         Integrated Security=False;
+         Trusted_Connection=False;
+         Persist Security Info=True;
+         user id=CS597WebDev;password=#AllYourBase1985;"
+         
+         />
+   <!-- <add name="DefaultConnection" 
+         connectionString="Data Source=CALVIN-PC\SQLEXPRESS;Initial Catalog=Barker;Integrated Security=True" 
+         providerName="System.Data.SqlClient" />
+
+   <add name="BarkerData" 
+        connectionString="data source=calvin-pc\sqlexpress;initial catalog=Barker;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" 
+        providerName="System.Data.SqlClient" />-->
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -33,6 +59,17 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <rewrite>
+      <rules>
+        <rule name="HTTP to HTTPS redirect" stopProcessing="true">
+          <match url="(.*)" />
+          <conditions>
+            <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+          </conditions>
+          <action type="Redirect" redirectType="Found" url="https://{HTTP_HOST}/{REQUEST_URI}" />
+        </rule>
+      </rules>
+    </rewrite>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -82,8 +119,8 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
-      </provider></providers>
+    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
+</providers>
   </entityFramework>
   <system.codedom>
     <compilers>
